--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,16 +49,16 @@ jobs:
           tags: kottmar/app1:${{ env.RELEASE_VERSION }} ##<-- Your Docker image
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: kottmar/app1:${{ env.RELEASE_VERSION }} ##<-- Your Docker image
-          exit-code: '1'
-          ignore-unfixed: true
-          vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+      # - name: Run Trivy vulnerability scanner
+      #   uses: aquasecurity/trivy-action@master
+      #   with:
+      #     image-ref: kottmar/app1:${{ env.RELEASE_VERSION }} ##<-- Your Docker image
+      #     exit-code: '1'
+      #     ignore-unfixed: true
+      #     vuln-type: 'os,library'
+      #     severity: 'CRITICAL,HIGH'
+      # - name: Image digest
+      #   run: echo ${{ steps.docker_build.outputs.digest }}
 
   deploy-chart:
     runs-on: ubuntu-latest
